@@ -1,4 +1,2 @@
-#ifdef _MSC_VER
 #define PACKED
 #pragma pack(push,1)
-#endif
