@@ -1,7 +1,3 @@
-#ifdef _MSC_VER
 ;
 #pragma pack(pop)
 #undef PACKED
-#else
-PACKED__;
-#endif
