@@ -51,9 +51,9 @@
  * You shouldn't need to touch any of these
  */
 
-#ifdef FSUAE
+//#ifdef FSUAE
 
-#else
+//#else
 
 /* Ignore this */
 #undef DUMMY_PPP
@@ -103,7 +103,7 @@
 #undef HAVE_SETENV
 
 /* Define if you have index() */
-#undef HAVE_INDEX
+//#undef HAVE_INDEX
 
 /* Define if you have bcmp() */
 #undef HAVE_BCMP
@@ -140,4 +140,4 @@
 /* Define if you have <sys/type32.h> */
 #undef HAVE_SYS_TYPES32_H
 
-#endif // FSUAE
+//#endif // FSUAE
