@@ -4,6 +4,7 @@ Version 2.6.7dev:
 * Modified Makefile.am for out-of-tree builds.
 * Fixed crash when playing videos with CD32 FMV (no display yet).
 * Added libudis86 (disassembler library for x86 / x86-64).
+* Explicitly flush lines logged to stdout.
 
 Version 2.5.6dev:
 
